--- a/index.html
+++ b/index.html
@@ -893,60 +893,65 @@
           <div class="row">
             <div class="col-md-12">
               <div class="screenshots-carousel animated out" data-animation="fadeInUp" data-delay="0">
-
                 <div class="shot">
                   <div class="screen">
-                    <a class="zoom" href="assets/images/screenshots/1.jpeg"><img src="assets/images/screenshots/1.jpeg"
-                        alt="screenshot"></a>
+                    <a class="zoom" href="assets/images/screenshots/1.jpeg">
+                      <img class="screenshot-img" src="assets/images/screenshots/1.jpeg" alt="screenshot">
+                    </a>
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
                 <div class="shot">
                   <div class="screen">
-                    <a class="zoom" href="assets/images/screenshots/2.jpeg"><img src="assets/images/screenshots/2.jpeg"
-                        alt="screenshot"></a>
+                    <a class="zoom" href="assets/images/screenshots/2.jpeg">
+                      <img class="screenshot-img" src="assets/images/screenshots/2.jpeg" alt="screenshot">
+                    </a>
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
                 <div class="shot">
                   <div class="screen">
-                    <a class="zoom" href="assets/images/screenshots/3.jpeg"><img src="assets/images/screenshots/3.jpeg"
-                        alt="screenshot"></a>
-                  </div> <!-- end screen -->
-                </div> <!-- end shot -->
-
-
-                <div class="shot">
-                  <div class="screen">
-                    <a class="zoom" href="assets/images/screenshots/4.jpeg"><img src="assets/images/screenshots/4.jpeg"
-                        alt="screenshot"></a>
+                    <a class="zoom" href="assets/images/screenshots/3.jpeg">
+                      <img class="screenshot-img" src="assets/images/screenshots/3.jpeg" alt="screenshot">
+                    </a>
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
                 <div class="shot">
                   <div class="screen">
-                    <a class="zoom" href="assets/images/screenshots/5.jpeg"><img src="assets/images/screenshots/5.jpeg"
-                        alt="screenshot"></a>
+                    <a class="zoom" href="assets/images/screenshots/4.jpeg">
+                      <img class="screenshot-img" src="assets/images/screenshots/4.jpeg" alt="screenshot">
+                    </a>
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
                 <div class="shot">
                   <div class="screen">
-                    <a class="zoom" href="assets/images/screenshots/6.jpeg"><img src="assets/images/screenshots/6.jpeg"
-                        alt="screenshot"></a>
+                    <a class="zoom" href="assets/images/screenshots/5.jpeg">
+                      <img class="screenshot-img" src="assets/images/screenshots/5.jpeg" alt="screenshot">
+                    </a>
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
                 <div class="shot">
                   <div class="screen">
-                    <a class="zoom" href="assets/images/screenshots/1.jpeg"><img src="assets/images/screenshots/1.jpeg"
-                        alt="screenshot"></a>
+                    <a class="zoom" href="assets/images/screenshots/6.jpeg">
+                      <img class="screenshot-img" src="assets/images/screenshots/6.jpeg" alt="screenshot">
+                    </a>
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
+                <div class="shot">
+                  <div class="screen">
+                    <a class="zoom" href="assets/images/screenshots/1.jpeg">
+                      <img class="screenshot-img" src="assets/images/screenshots/1.jpeg" alt="screenshot">
+                    </a>
+                  </div> <!-- end screen -->
+                </div> <!-- end shot -->
               </div> <!-- end screenshots-carousel -->
             </div> <!-- end col-md-12 -->
-          </div> <!-- end row -->
+          </div>
+          <!-- end row -->
         </div><!--  end container -->
       </div>
     </section>
