--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
+  <!-- Load jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- Load your animation library if any -->
+  <script src="path/to/your/animation-library.js"></script>
+  <!-- Load your custom script -->
+  <script src="path/to/your/custom-script.js"></script>
 
 </head>
 
@@ -893,7 +899,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="screenshots-carousel animated out" data-animation="fadeInUp" data-delay="0">
-                <div class="shot">
+                <div class="shot animated fadeInUp">
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/1.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/1.jpeg" alt="screenshot">
@@ -901,7 +907,7 @@
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
-                <div class="shot">
+                <div class="shot animated fadeInUp">
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/2.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/2.jpeg" alt="screenshot">
@@ -909,7 +915,7 @@
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
-                <div class="shot">
+                <div class="shot animated fadeInUp">
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/3.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/3.jpeg" alt="screenshot">
@@ -917,7 +923,7 @@
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
-                <div class="shot">
+                <div class="shot animated fadeInUp">
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/4.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/4.jpeg" alt="screenshot">
@@ -925,7 +931,7 @@
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
-                <div class="shot">
+                <div class="shot animated fadeInUp">
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/5.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/5.jpeg" alt="screenshot">
@@ -933,7 +939,7 @@
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
-                <div class="shot">
+                <div class="shot animated fadeInUp">
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/6.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/6.jpeg" alt="screenshot">
@@ -941,7 +947,7 @@
                   </div> <!-- end screen -->
                 </div> <!-- end shot -->
 
-                <div class="shot">
+                <div class="shot animated fadeInUp">
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/1.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/1.jpeg" alt="screenshot">
