--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
 
     <!-- Screenshots
     ================================================== -->
-    <section>
+    <!-- <section>
       <div id="screenshots-section" class="pad-sec">
         <div class="container">
           <div class="title-section text-center animated out" data-animation="fadeInUp" data-delay="0">
@@ -893,74 +893,74 @@
                 <hr>
                 <p>Seamlessly restore client-focused potentialities rather than functional strategic theme areas.</p>
               </div>
-            </div> <!-- End row -->
-          </div> <!-- end title-section -->
+            </div> 
+          </div> 
 
           <div class="row">
             <div class="col-md-12">
               <div class="screenshots-carousel animated out" data-animation="fadeInUp" data-delay="0">
-                <div class="shot animated fadeInUp">
+                <div >
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/1.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/1.jpeg" alt="screenshot">
                     </a>
-                  </div> <!-- end screen -->
-                </div> <!-- end shot -->
+                  </div> 
+                </div> 
 
-                <div class="shot animated fadeInUp">
+                <div >
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/2.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/2.jpeg" alt="screenshot">
                     </a>
-                  </div> <!-- end screen -->
-                </div> <!-- end shot -->
+                  </div> 
+                </div> 
 
-                <div class="shot animated fadeInUp">
+                <div >
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/3.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/3.jpeg" alt="screenshot">
                     </a>
-                  </div> <!-- end screen -->
-                </div> <!-- end shot -->
+                  </div> 
+                </div> 
 
-                <div class="shot animated fadeInUp">
+                <div >
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/4.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/4.jpeg" alt="screenshot">
                     </a>
-                  </div> <!-- end screen -->
-                </div> <!-- end shot -->
+                  </div> 
+                </div> 
 
-                <div class="shot animated fadeInUp">
+                <div >
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/5.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/5.jpeg" alt="screenshot">
                     </a>
-                  </div> <!-- end screen -->
-                </div> <!-- end shot -->
+                  </div> 
+                </div> 
 
-                <div class="shot animated fadeInUp">
+                <div >
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/6.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/6.jpeg" alt="screenshot">
                     </a>
-                  </div> <!-- end screen -->
-                </div> <!-- end shot -->
+                  </div> 
+                </div> 
 
-                <div class="shot animated fadeInUp">
+                <div >
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/1.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/1.jpeg" alt="screenshot">
                     </a>
-                  </div> <!-- end screen -->
-                </div> <!-- end shot -->
-              </div> <!-- end screenshots-carousel -->
-            </div> <!-- end col-md-12 -->
+                  </div> 
+                </div> 
+              </div> 
+            </div> 
           </div>
-          <!-- end row -->
-        </div><!--  end container -->
+          
+        </div>
       </div>
-    </section>
+    </section> -->
     <!-- End screenshots-section -->
 
     <!-- Clients-section
@@ -1025,7 +1025,7 @@
 
     <!-- Testimonial
       ================================================== -->
-    <section>
+    <!-- <section>
       <div id="testimonials-section">
         <div class="container">
           <div class="row">
@@ -1035,7 +1035,7 @@
 
                 <ul class="testimonials-slider">
 
-                  <!-- Testimonial -->
+
                   <li>
                     <img src="assets/images/temp/client-photo.jpg" alt="">
                     <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusultricies porta
@@ -1043,7 +1043,7 @@
                     <div class="testimonials-author"> ClasDesign - Front End Developer </div>
                   </li>
 
-                  <!-- Testimonial -->
+
                   <li>
                     <img src="assets/images/temp/client-photo.jpg" alt="">
                     <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusultricies porta
@@ -1051,7 +1051,7 @@
                     <div class="testimonials-author">John Doe - Web Developer</div>
                   </li>
 
-                  <!-- Testimonial -->
+
                   <li>
                     <img src="assets/images/temp/client-photo.jpg" alt="">
                     <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusultricies porta
@@ -1064,14 +1064,14 @@
                 <div class="tc-arrows">
                   <div class="tc-arrow-left"></div>
                   <div class="tc-arrow-right"></div>
-                </div> <!-- end tc-arrows -->
-              </div> <!-- end testimonials-carousel -->
+                </div>
+              </div>
 
-            </div> <!-- end col-md-8 -->
-          </div> <!-- end row -->
-        </div> <!-- end container -->
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
+    </section> -->
     <!-- end testimonial section -->
 
     <section>
