--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
 
   <!-- Load jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- Load your animation library if any -->
-  <script src="path/to/your/animation-library.js"></script>
-  <!-- Load your custom script -->
-  <script src="path/to/your/custom-script.js"></script>
+
 
 </head>
 
@@ -78,20 +75,20 @@
   <!-- Navbar -->
   <header class="header">
     <nav class="navbar navbar-default navbar-static-top">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <img src="assets/images/logo.png" alt="Logo" class="logo-img">
+          <span class="company-name">Solution Tech Services</span>
+        </a>
+      </div>
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-nav">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button> -->
+        <!-- <div class="navbar-header">
           <a class="navbar-brand" href="#">
-            <img src="assets/images/logo.png" alt="" class="logo-img">
-            <!-- <span class="company-name">Solution Tech Services</span> -->
+            <img src="assets/images/logo.png" alt="Logo" class="logo-img">
+            <span class="company-name">Solution Tech Services</span>
           </a>
-        </div>
+        </div> -->
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navigation-nav">
@@ -107,6 +104,7 @@
       </div><!-- /.container -->
     </nav>
   </header>
+
 
 
   <!-- End Navbar -->
@@ -126,70 +124,70 @@
                     <ul class="caption-slides">
 
                       <li class="caption">
-                        <h1>Mobile App Development</h1>
+                        <h1 class="head-primary" class="head-primary">Mobile App Development</h1>
                         <div class="div-line"></div>
                         <p class="hero">Developing innovative and user-friendly mobile apps to enhance customer
                           engagement and streamline operations.</p>
                       </li>
 
                       <li class="caption">
-                        <h1>Responsive Web Design</h1>
+                        <h1 class="head-primary">Responsive Web Design</h1>
                         <div class="div-line"></div>
                         <p class="hero">Creating visually appealing and responsive websites to ensure optimal
                           performance across all devices.</p>
                       </li>
 
                       <li class="caption">
-                        <h1>Brand Identity</h1>
+                        <h1 class="head-primary">Brand Identity</h1>
                         <div class="div-line"></div>
                         <p class="hero">Building strong brand identities that resonate with audiences and foster brand
                           loyalty.</p>
                       </li>
 
                       <li class="caption">
-                        <h1>Creative Logo Design</h1>
+                        <h1 class="head-primary">Creative Logo Design</h1>
                         <div class="div-line"></div>
                         <p class="hero">Designing memorable logos that capture the essence of your brand and make a
                           lasting impression.</p>
                       </li>
 
                       <li class="caption">
-                        <h1>Custom Illustrations</h1>
+                        <h1 class="head-primary">Custom Illustrations</h1>
                         <div class="div-line"></div>
                         <p class="hero">Providing high-quality, custom illustrations that visually communicate your
                           brand’s message.</p>
                       </li>
 
                       <li class="caption">
-                        <h1>Flexible Customization</h1>
+                        <h1 class="head-primary">Flexible Customization</h1>
                         <div class="div-line"></div>
                         <p class="hero">Our solutions are easily customizable to meet the specific needs of your
                           business.</p>
                       </li>
 
                       <li class="caption">
-                        <h1>Engaging Video Content</h1>
+                        <h1 class="head-primary">Engaging Video Content</h1>
                         <div class="div-line"></div>
                         <p class="hero">Creating captivating video content to enhance storytelling and engage your
                           audience.</p>
                       </li>
 
                       <li class="caption">
-                        <h1>Professional Photography</h1>
+                        <h1 class="head-primary">Professional Photography</h1>
                         <div class="div-line"></div>
                         <p class="hero">Providing professional photography services to showcase your brand's best visual
                           appeal.</p>
                       </li>
 
                       <li class="caption">
-                        <h1>Strategic Marketing</h1>
+                        <h1 class="head-primary">Strategic Marketing</h1>
                         <div class="div-line"></div>
                         <p class="hero">Implementing effective marketing strategies to maximize your brand's reach and
                           impact.</p>
                       </li>
 
                       <li class="caption">
-                        <h1>Dedicated Support</h1>
+                        <h1 class="head-primary">Dedicated Support</h1>
                         <div class="div-line"></div>
                         <p class="hero">Offering 24/7 support to assist with any issues and ensure smooth operations.
                         </p>
@@ -887,7 +885,7 @@
 
     <!-- Screenshots
     ================================================== -->
-    <!-- <section>
+    <section>
       <div id="screenshots-section" class="pad-sec">
         <div class="container">
           <div class="title-section text-center animated out" data-animation="fadeInUp" data-delay="0">
@@ -897,74 +895,74 @@
                 <hr>
                 <p>Seamlessly restore client-focused potentialities rather than functional strategic theme areas.</p>
               </div>
-            </div> 
-          </div> 
+            </div>
+          </div>
 
           <div class="row">
             <div class="col-md-12">
               <div class="screenshots-carousel animated out" data-animation="fadeInUp" data-delay="0">
-                <div >
+                <div>
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/1.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/1.jpeg" alt="screenshot">
                     </a>
-                  </div> 
-                </div> 
+                  </div>
+                </div>
 
-                <div >
+                <div>
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/2.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/2.jpeg" alt="screenshot">
                     </a>
-                  </div> 
-                </div> 
+                  </div>
+                </div>
 
-                <div >
+                <div>
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/3.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/3.jpeg" alt="screenshot">
                     </a>
-                  </div> 
-                </div> 
+                  </div>
+                </div>
 
-                <div >
+                <div>
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/4.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/4.jpeg" alt="screenshot">
                     </a>
-                  </div> 
-                </div> 
+                  </div>
+                </div>
 
-                <div >
+                <div>
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/5.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/5.jpeg" alt="screenshot">
                     </a>
-                  </div> 
-                </div> 
+                  </div>
+                </div>
 
-                <div >
+                <div>
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/6.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/6.jpeg" alt="screenshot">
                     </a>
-                  </div> 
-                </div> 
+                  </div>
+                </div>
 
-                <div >
+                <div>
                   <div class="screen">
                     <a class="zoom" href="assets/images/screenshots/1.jpeg">
                       <img class="screenshot-img" src="assets/images/screenshots/1.jpeg" alt="screenshot">
                     </a>
-                  </div> 
-                </div> 
-              </div> 
-            </div> 
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          
+
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- End screenshots-section -->
 
     <!-- Clients-section
