--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
 
     <!-- Screenshots
     ================================================== -->
-    <section>
+    <!-- <section>
       <div id="screenshots-section" class="pad-sec">
         <div class="container">
           <div class="title-section text-center animated out" data-animation="fadeInUp" data-delay="0">
@@ -962,7 +962,7 @@
 
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End screenshots-section -->
 
     <!-- Clients-section
